# LangHaskell

./: .gitignore  Canonical  Canonical.md  Links  Links.md  LinksRelatedToHaskellToBeOrganized  Paradigms.md  README-1-SettingupSandboxesUsingCabal.txt  README.md  SalientFeatures  SalientFeatures.md  TODO.md  Tools.md  helloWorld.hs
Articles/: Transformer.lhs  arrows-monads-kleisli.hs  error.txt  monad-transformers-step-by-step.hs  output.txt
Book-LYAH/: 01-functions.hs  02-lists.hs  04-infinite-lists.hs  05-list-comprehension.hs  06-tuples.hs  10-typeInference.hs  101-RPN.hs  102-SP.hs  111-Functors.hs  112-ApplicativeFunctors.hs  113-newtype.hs  114-Monoids.hs  120-Monads-I.hs  121-knights-quest.hs  131-Monads-II-writer-ex.hs  131-Monads-II-writer.hs  132-Monads-II-reader-ex.hs  132-Monads-II-reader.hs  133-Monads-II-state.hs  134-Monads-II-usefulFunctions.hs  135-making-monads.hs  136-zippers-ex.hs  136-zippers.hs  20-starting-out-ex.hs  22-Functions-PatternMatching-Guards.hs  23-Functions-where.hs  23-ranges.hs  30-Recursion.hs  30-types-and-typeclasses.hs  40-syntax-in-functions-ex.hs  41-Functions-PatternMatching.hs  41-HOF-curried.hs  42-HOF-HOF.hs  43-HOF-mapsAndFilters.hs  44-Functions-let.hs  45-Functions-Case.hs  50-Recursion-ex.hs  63-HOF-mapsAndFilters.hs  64-HOF-lambdas.hs  65-HOF-folds.hs  (+26 more)
cis194-fall14/: 01-intro.hs  02-lists.hs  03-adts.hs  04-parametric-polymorphism.hs  05-type-classes.hs  06-monoids_io.hs  07-lazy.hs  07-lazy.ps  08-monads.hs  09-testing.hs  10-gloss.hs  (+1 more)
wyas/scheme/: README.md  scheme.cabal  stack.yaml
wyas/scheme/src/: Main.hs
(+96 files in other folders)
