name:                scheme
version:             0.1
synopsis:            Write you a Scheme 
description:         (https://en.wikibooks.org/wiki/Write_Yourself_a_Scheme_in_48_Hours and https://github.com/write-you-a-scheme-v2)
homepage:            https://github.com/githubuser/scheme#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable scheme
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    parsec >= 3.1 && < 3.2
